remove run call from default as tester.py will be used instead

--- a/solver/Makefile
+++ b/solver/Makefile
@@ -8,7 +8,7 @@ TARGET = $(BUILD_DIR)/solver
 
 # Default target
 .PHONY: all
-all: $(TARGET) run
+all: $(TARGET) 
 
 # Compile the program
 $(TARGET): $(SRC)
